Fix: Yet another attempt to prevent vertical scrolling on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -85,3 +85,8 @@ body {
   max-height: 100%;
   overflow-y: hidden;
 }
+
+* {
+    user-select: none;
+    touch-action: none;
+}
